Final Product Push

--- a/SimpleBobaWebsite.html
+++ b/SimpleBobaWebsite.html
@@ -6,16 +6,84 @@
         <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet'>
         <style>
             body {
-                background-color: #bf8445;
-            }
-            h1 {
+                background-color: #d7be82;
+                font-family: cursive;
                 text-align: center;
+                size: 50%;
+            }
+
+            p {
+                margin-left: 15%;
+                margin-right: 15%;
+                font-size: 16px;
+            }
+
+            hr {
+                margin-left: 10%;
+                margin-right: 10%;
+            }
+
+            .title {
+                color: #bf8445;
                 font-family: Pacifico;
-                color: ;
+                text-shadow: -1px -1px 0 #f0f, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+                font-size: 40px;
+                margin-top: 5px;
+            }
+
+            h1{
+                color: #bf8445;
+                text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+                margin: -10px;
+            }
+
+            .image {
+                margin-left: auto;
+                margin-right: auto;
+                display: block;
+                
+            }
+
+            .caption {
+                display: block;
+                margin-top: 1em;
+                margin-bottom: 1em;
+                margin-left: 0;
+                margin-right: 0;
+                font-size: 12px;
             }
         </style>
     </head>
     <body>
-        <h1>BOBA</h1>
+        <h1 class="title">BOBA</h1>
+        <img class="image" src="bobaMainImage.png"/>
+        <p class="caption">The thing we all love: <b>Boba</b>.</p>
+        <hr>
+        <p>I love boba. You love boba. We all love boba. </p>
+        <p>But how did such delicousness come into being you might ask. Well to satiate your curiousity, here's a
+        </p>
+        <h1> Brief History of Boba </h1>
+        <p> Boba, or bubble tea, is a delightful beverage that originated in Taiwan during the 1980s. It is believed to have been created by two tea houses, Chun Shui Tang and Hanlin Tea Room, each claiming to be the first to combine tea, milk, and chewy tapioca pearls into a single drink. The result was a unique and satisfying concoction that quickly gained popularity in Taiwan and beyond. </p>
+        <p> By the 1990s, boba had made its way to other parts of Asia, and by the early 2000s, it began to appear in the United States, particularly in cities with significant Asian-American communities, such as Los Angeles and New York. The drink's appeal lies in its versatility—customers can choose from a variety of teas, milk options, and toppings, such as fruit jellies, pudding, or the signature tapioca pearls. </p>
+        <p> In recent years, boba has become a global phenomenon, enjoyed by people of all ages and backgrounds. Its rise in popularity has led to the creation of countless boba shops worldwide, each offering their own unique twists on the classic drink. Today, boba is not just a beverage but a cultural icon, representing creativity, innovation, and the joy of discovering new flavors. </p>
+        <hr>
+        <h1 style="margin-top: 20px;">Personal Favorites</h1>
+        <img class="image" src="bobaMilkTea.png"/>
+        <p class="caption"><b>Traditional Plain Milk Tea Boba</b></p>
+        <p>
+            I know. I know. Thats so <em>basic</em> but COME ON. There is no way you're telling me Plain Milk Tea isn't iconic.<br/>
+            Like it isn't the one thing that comes to mind when you think of boba fr.
+        </p>
+        <p>
+            I'm recommending it to everyone who's reading this: Go get yourself some boba. <br/>
+            You guys work hard. I see it alright. <br>
+            Which is why you should treat yourself with some boba fr.
+        </p>
+
+        <hr>
+
+        <div style="background-color: #8b8a7a; margin-left:40%; margin-right: 40%;">
+            <p> This simple website was made for Hack Club's <br> <a href="https://boba.hackclub.com/" target="_blank">Boba Drops</a>.</p>
+        </div>
     </body>
 </html>
